2017-11-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with multi-selection and entry editing (Bug 387053).

2017-11-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with incorrect entry titles in icon view and multiple entry icons (Bug 386548).
	* Fixed a few ISO-6937 character encodings.

2017-11-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug for "losing" icons after modifying a collection (Bug 386549).

2017-11-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with duplicated colons in CSV importer (Bug 386483).

2017-11-01  Robby Stephenson  <robby@periapsis.org>

	* Improved "Filter by Group" to use a regular expression (Bug 386011).

2017-10-14  Robby Stephenson  <robby@periapsis.org>

	* Updated Goodreads importer to use https endpoint.

2017-10-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.

2017-09-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bugs with remote image loading (Bug 382572, Bug 379607, Bug 384104).

2017-09-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing stars in column view for float values (Bug 384547).
	* Fixed bug with comparing float values (Bug 384547).

2017-08-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed building with CMake 3.9+ (Bug 382680).

2017-07-16  Robby Stephenson  <robby@periapsis.org>

	* Added data source for kino.de.

2017-07-07  Robby Stephenson  <robby@periapsis.org>

	* Added message dialog for Amazon Associate warning (Bug 364784).

2017-07-06  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS option for filtering exported entries (Bug 382035).

2017-07-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug of running out of memory when writing very large XML files (Bug 380832).
	* Improved performance for filtering large collections by avoiding needless field value formatting.

2017-06-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with some icons not being shown (Bug 378477).
